[package]
name = "skrytsam"
description = "generate pretty svgs for your profile on GitHub"
version = "0.1.5"
edition = "2024"
repository = "https://github.com/sermuns/skrytsam"
license = "WTFPL"

[package.metadata.typst-bake]
template-dir = "./assets/typst/"
fonts-dir = "./assets/fonts/"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = { version = "0.6.5", default-features = false }
futures = "0.3.31"
indicatif = { version = "0.18.3", features = ["tokio"] }
octocrab = "0.49.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
typst-bake = { version = "0.1", default-features = false, features = ["svg"] }

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true
